refactor: `Project` service & controller logic - add custom DTOs