@@ -3,6 +3,9 @@ package org.example.projectmanagerapp.service;
 import org.example.projectmanagerapp.entity.Project;
 import org.example.projectmanagerapp.entity.Task;
 import org.example.projectmanagerapp.entity.User;
+import org.example.projectmanagerapp.interfaces.ProjectResponseDTO;
+import org.example.projectmanagerapp.interfaces.ProjectTasksResponseDTO;
+import org.example.projectmanagerapp.interfaces.ProjectUserResponseDTO;
 import org.example.projectmanagerapp.repository.ProjectRepository;
 import org.example.projectmanagerapp.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -11,6 +14,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class ProjectService {
@@ -23,40 +27,49 @@ public class ProjectService {
         this.userRepository = userRepository;
     }
 
-    public List<Project> getAllProjects() {
-        return projectRepository.findAll();
+    public List<ProjectResponseDTO> getAllProjects() {
+        return projectRepository.findAll().stream()
+                .map(this::mapToProjectResponseDTO)
+                .collect(Collectors.toList());
     }
 
-    public Project getProjectById(Long projectId) {
-        return projectRepository.findById(projectId)
+    public ProjectResponseDTO getProjectById(Long projectId) {
+        Project project = projectRepository.findById(projectId)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Project not found"));
+        return mapToProjectResponseDTO(project);
     }
 
-    public List<User> getAssociatedUsers(Long projectId) {
+    public List<ProjectUserResponseDTO> getAssociatedUsers(Long projectId) {
         Project project = projectRepository.findById(projectId)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Project not found"));
 
-        return project.getUsers().stream().toList();
+        return project.getUsers().stream()
+                .map(this::mapToUserResponseDTO)
+                .collect(Collectors.toList());
     }
 
-    public List<Task> getAssociatedTasks(Long projectId) {
+    public List<ProjectTasksResponseDTO> getAssociatedTasks(Long projectId) {
         Project project = projectRepository.findById(projectId)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Project not found"));
 
-        return project.getTasks().stream().toList();
+        return project.getTasks().stream()
+                .map(this::mapToTaskResponseDTO)
+                .collect(Collectors.toList());
     }
 
-    public Project createProject(String projectName) {
-        return projectRepository.save(new Project(projectName));
+    public ProjectResponseDTO createProject(String projectName) {
+        Project project = projectRepository.save(new Project(projectName));
+				return mapToProjectResponseDTO(project);
     }
 
-    public Project renameProject(Long projectId, String projectName) {
-        return projectRepository.findById(projectId)
+    public ProjectResponseDTO renameProject(Long projectId, String projectName) {
+        Project project = projectRepository.findById(projectId)
                 .map(existingProject -> {
                     existingProject.setName(projectName);
                     return projectRepository.save(existingProject);
                 })
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Operation was not successful"));
+				return mapToProjectResponseDTO(project);
     }
 
     public void deleteProject(Long projectId) {
@@ -83,5 +96,28 @@ public class ProjectService {
 
         project.getUsers().remove(user);
         projectRepository.save(project);
+    }
+
+    private ProjectResponseDTO mapToProjectResponseDTO(Project project) {
+        ProjectResponseDTO dto = new ProjectResponseDTO();
+        dto.setId(project.getId());
+        dto.setName(project.getName());
+        return dto;
+    }
+
+    private ProjectTasksResponseDTO mapToTaskResponseDTO(Task task) {
+        ProjectTasksResponseDTO dto = new ProjectTasksResponseDTO();
+        dto.setId(task.getId());
+        dto.setTitle(task.getTitle());
+        dto.setDescription(task.getDescription());
+        dto.setTaskType(task.getTaskType());
+        return dto;
+    }
+
+    private ProjectUserResponseDTO mapToUserResponseDTO(User user) {
+        ProjectUserResponseDTO dto = new ProjectUserResponseDTO();
+        dto.setId(user.getId());
+        dto.setUsername(user.getUsername());
+        return dto;
     }
 }
